--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "authentic",
   "version": "0.0.0",
-  "description": "Proper validation of jwt's against jwk's",
+  "description": "Proper validation of JWT's against JWK's",
   "main": "index.js",
   "repository": "git@github.com:articulate/authentic.git",
   "author": "articulate",
