--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@articulate/authentic",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "Proper validation of JWT's against JWK's",
   "main": "index.js",
   "repository": "git@github.com:articulate/authentic.git",
@@ -33,8 +33,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
-    "eslint": "5.13.x",
-    "mocha": "^5.0.0",
+    "eslint": "5.14.x",
+    "mocha": "6.0.x",
     "nock": "10.x.x",
     "nyc": "13.x.x",
     "prop-factory": "^1.0.0"
