--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@articulate/funky": "^1.2.0",
     "@articulate/gimme": "^1.0.0",
-    "boom": "5.2.0",
+    "boom": "7.3.x",
     "jsonwebtoken": "^8.1.1",
     "jwks-rsa": "^1.2.1",
     "ramda": "^0.25.0"
@@ -33,10 +33,10 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
-    "eslint": "^4.16.0",
-    "mocha": "^5.0.0",
-    "nock": "^9.1.6",
-    "nyc": "^11.4.1",
+    "eslint": "5.14.x",
+    "mocha": "6.0.x",
+    "nock": "10.x.x",
+    "nyc": "13.x.x",
     "prop-factory": "^1.0.0"
   }
 }
