--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "Proper validation of JWT's against JWK's",
   "main": "index.js",
+  "types": "index.d.ts",
   "repository": "git@github.com:articulate/authentic.git",
   "author": "articulate",
   "license": "MIT",
