--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mocha": "6.0.x",
     "nock": "10.x.x",
     "nyc": "13.x.x",
-    "prop-factory": "^1.0.0"
+    "prop-factory": "^1.0.0",
+    "sinon": "^9.0.2"
   }
 }
