Replace gimme with axios
* jwks-rsa already has axios as a dependent.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@articulate/funky": "^1.2.0",
-    "@articulate/gimme": "^1.0.0",
+    "axios": "^0.20.0",
     "boom": "7.3.x",
     "jsonwebtoken": "^8.1.1",
     "jwks-rsa": "^1.9.0",
