--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "dependencies": {
     "axios": "^0.20.0",
     "boom": "7.3.x",
-    "deepmerge": "^4.2.2",
     "jsonwebtoken": "^8.1.1",
     "jwks-rsa": "^1.9.0",
-    "lodash.pick": "^4.4.0"
+    "lodash.pick": "^4.4.0",
+    "merge": "^1.2.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
