--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "test:coverage": "nyc yarn test"
   },
   "dependencies": {
+    "@ianwalter/merge": "^9.0.1",
     "axios": "^0.20.0",
     "boom": "7.3.x",
     "jsonwebtoken": "^8.1.1",
     "jwks-rsa": "^1.9.0",
-    "lodash.pick": "^4.4.0",
-    "merge": "^1.2.1"
+    "lodash.pick": "^4.4.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
