--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "test:coverage": "nyc yarn test"
   },
   "dependencies": {
-    "@articulate/funky": "^1.2.0",
-    "@articulate/gimme": "^1.0.0",
+    "axios": "^0.20.0",
     "boom": "7.3.x",
     "jsonwebtoken": "^8.1.1",
-    "jwks-rsa": "^1.2.1",
-    "ramda": "^0.25.0"
+    "jwks-rsa": "^1.9.0",
+    "lodash.pick": "^4.4.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
