--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mocha": "6.0.x",
     "nock": "10.x.x",
     "nyc": "13.x.x",
-    "prop-factory": "^1.0.0"
+    "prop-factory": "^1.0.0",
+    "sinon": "^9.2.0"
   }
 }
