--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:coverage": "nyc yarn test"
   },
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "0.21.4",
     "boom": "7.3.x",
     "jsonwebtoken": "^8.1.1",
     "jwks-rsa": "^1.9.0",
