--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "axios": "0.21.4",
     "boom": "7.3.x",
     "jsonwebtoken": "^9.0.0",
-    "jwks-rsa": "^1.9.0",
+    "jwks-rsa": "1.12.3",
     "lodash.pick": "^4.4.0"
   },
   "devDependencies": {
