--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "test:coverage": "nyc yarn test"
   },
   "dependencies": {
-    "axios": "0.21.4",
     "boom": "7.3.x",
     "jsonwebtoken": "^9.0.0",
-    "jwks-rsa": "1.12.3",
+    "jwks-rsa": "^3.0.1",
     "lodash.pick": "^4.4.0"
   },
   "devDependencies": {
