--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "preversion": "git checkout master",
     "test": "mocha --reporter=dot",
     "test:ci": "yarn lint && yarn test:coverage && yarn coverage",
-    "test:coverage": "nyc yarn test"
+    "test:coverage": "nyc mocha --reporter=dot"
   },
   "dependencies": {
     "boom": "7.3.x",
