--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:coverage": "nyc mocha --reporter=dot"
   },
   "dependencies": {
-    "boom": "7.3.x",
+    "@hapi/boom": "^10.0.0",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
     "lodash.pick": "^4.4.0"
