--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
-    "eslint": "5.14.x",
+    "eslint": "^8.33.0",
     "mocha": "6.0.x",
     "nock": "11",
     "nyc": "13.x.x",
