--- a/.npmignore
+++ b/.npmignore
@@ -3,8 +3,10 @@
 .DS_Store
 .eslintrc.js
 .gitignore
+.nyc_output
 .travis.yml
-/.nyc_output
-/node_modules
-/test
+CODEOWNERS
+coverage
+node_modules
+test
 yarn.lock
