--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash.pick": "^4.4.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "eslint": "^8.33.0",
