--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "types": ["node"],
     "module": "commonjs",
     "baseUrl": "./src",
     "declaration": true,
-    "declarationMap": true,
     "outDir": "./dist",
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
+    "strict": true
   }
 }
