test: added tests using Jest

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "rollup --config rollup.config.ts --configPlugin typescript",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint .",
-    "test": "mocha",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
     "test:ci": "yarn lint && yarn test:coverage && yarn coverage",
     "test:coverage": "nyc mocha --reporter=dot",
     "preversion": "git checkout main",
@@ -36,13 +37,17 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@rollup/plugin-typescript": "^11.1.2",
+    "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "esbuild": "^0.19.2",
     "eslint": "^8.47.0",
+    "jest": "^29.6.2",
+    "nock": "^13.3.3",
     "rollup": "^3.28.0",
     "rollup-plugin-dts": "^6.0.0",
     "rollup-plugin-esbuild": "^5.0.0",
+    "ts-jest": "^29.1.1",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   },
