--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
-    "types": ["node", "jest"],
+    "target": "ES2020",
+    "types": ["node"],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "declaration": true,
@@ -12,6 +12,6 @@
     "strict": true
   },
   "include": [
-    "./src/index.ts"
+    "./src/**/*.ts"
   ]
 }
